# damc

./: .clang-format  .gitmodules  CMakeLists.txt  ControlClient.cpp  ControlClient.h  ControlInterface.cpp  ControlInterface.h  ControlServer.cpp  ControlServer.h  DelayFilter.cpp  DelayFilter.h  DitheringFilter.cpp  DitheringFilter.h  EqFilter.cpp  EqFilter.h  FilteringChain.cpp  FilteringChain.h  OutputInstance.cpp  OutputInstance.h  README.md  RemoteUdpOutput.cpp  RemoteUdpOutput.h  appveyor.yml  filter.h  filter_fir2.h  wavePlayUDP.cpp  wavePlayUDPJack.cpp  waveSendUDPJack.cpp  waveSendUDPPulse.cpp
binauralSynthesis/: BinauralSpacializer.cpp  BinauralSpacializer.h  CMakeLists.txt  Convolver.cpp  Convolver.h  DelayFilter.cpp  DelayFilter.h  DiscreteFourierTransform.cpp  DiscreteFourierTransform.h  main.cpp  testdft.cpp
common/: CMakeLists.txt  OscAddress.cpp  OscAddress.h  OscRoot.cpp  OscRoot.h  Utils.cpp  Utils.h
common/Osc/: OscArray.cpp  OscArray.h  OscCombinedVariable.cpp  OscCombinedVariable.h  OscContainer.cpp  OscContainer.h  OscContainerArray.h  OscDynamicVariable.h  OscEndpoint.h  OscFlatArray.cpp  OscFlatArray.h  OscGenericArray.h  OscNode.cpp  OscNode.h  OscReadOnlyVariable.cpp  OscReadOnlyVariable.h  OscVariable.cpp  OscVariable.h
damc_audio_processing/: CMakeLists.txt  CompressorFilter.cpp  CompressorFilter.h  DelayFilter.h  DitheringFilter.cpp  DitheringFilter.h  EqFilter.cpp  ExpanderFilter.cpp  FilteringChain.cpp  PeakMeter.cpp  PeakMeter.h  ReverbFilter.cpp  ReverbFilter.h
damc_common/: BiquadFilter.cpp  CMakeLists.txt  OscRoot.cpp  OscRoot.h  Utils.h  tinyosc.c  tinyosc.h
damc_common/Osc/: OscArray.cpp  OscArray.h  OscCombinedVariable.cpp  OscCombinedVariable.h  OscContainer.cpp  OscContainer.h  OscContainerArray.h  OscDynamicVariable.cpp  OscEndpoint.cpp  OscFlatArray.cpp  OscFlatArray.h  OscGenericArray.h  OscNode.cpp  OscNode.h  OscReadOnlyVariable.cpp  OscReadOnlyVariable.h  OscVariable.cpp  OscVariable.h
damc_gui/: Balance.cpp  Balance.h  Balance.ui  BalanceController.cpp  BalanceController.h  BodePlot.cpp  BodePlot.h  BodePlotWidget.cpp  BodePlotWidget.h  CMakeLists.txt  CompressorController.cpp  CompressorController.h  CompressorController.ui  DoubleClickSlider.cpp  DoubleClickSlider.h  Equalizer.cpp  Equalizer.h  Equalizer.ui  EqualizerFilters.ui  EqualizersController.cpp  EqualizersController.h  EqualizersController.ui  FastLabelWidget.cpp  FastLabelWidget.h  GlobalConfigDialog.cpp  GlobalConfigDialog.h  GlobalConfigDialog.ui  LevelMeterWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ManagedVisibilityWidget.h  OscStatePersist.cpp  OscStatePersist.h  OscWidgetArray.cpp  OscWidgetArray.h  OscWidgetMapper.cpp  OscWidgetMapper.h  OutputController.cpp  OutputController.h  (+16 more)
damc_server/: CMakeLists.txt  ControlInterface.cpp  ControlInterface.h  JackPortAutoConnect.cpp  JackPortAutoConnect.h  JackUtils.cpp  JackUtils.h  KeyBinding.cpp  KeyBinding.h  OscServer.cpp  OscServer.h  OscStatePersist.cpp  OscStatePersist.h  OscTcpClient.cpp  OscTcpClient.h  OscTcpServer.cpp  OscTcpServer.h  main.cpp
damc_server/ChannelStrip/: ChannelStrip.cpp  ChannelStrip.h  DeviceInputInstance.cpp  DeviceInputInstance.h  DeviceOutputInstance.cpp  DeviceOutputInstance.h  IAudioEndpoint.h  LoopbackOutputInstance.h  RemoteInputInstance.cpp  RemoteOutputInstance.cpp  RemoteUdpInput.cpp  RemoteUdpInput.h  RemoteUdpOutput.cpp  ResamplingFilter.cpp  SampleRateMeasure.cpp  SampleRateMeasure.h  WasapiInstance.cpp  WasapiInstance.h
damc_server/Filter/: CompressorFilter.cpp  CompressorFilter.h  DelayFilter.cpp  DitheringFilter.h  EqFilter.cpp  EqFilter.h  ExpanderFilter.cpp  ExpanderFilter.h  FilteringChain.cpp  FilteringChain.h  PeakMeter.cpp  PeakMeter.h
damc_server/OutputInstance/: DeviceInputInstance.cpp  DeviceInputInstance.h  DeviceOutputInstance.cpp  DeviceOutputInstance.h  IAudioEndpoint.h  OutputInstance.cpp  OutputInstance.h  RemoteInputInstance.cpp  RemoteInputInstance.h  RemoteOutputInstance.cpp  RemoteOutputInstance.h  RemoteUdpInput.cpp  RemoteUdpInput.h  RemoteUdpOutput.cpp  RemoteUdpOutput.h  ResamplingFilter.h  ResamplingFilter_coefs.cpp  SampleRateMeasure.cpp  WasapiInstance.cpp  WasapiInstance.h
delayControl/: CMakeLists.txt  DelayMeasure.cpp  DelayMeasure.h  PulseData.cpp  PulseData.h  PulseGenerator.cpp  PulseGenerator.h  ServerControl.cpp  ServerControl.h  WavLoader.cpp  WavLoader.h  delayControl.cpp
gui/: Balance.cpp  Balance.h  Balance.ui  BalanceController.cpp  BalanceController.h  BalanceController.ui  BodePlot.cpp  BodePlot.h  BodePlotWidget.cpp  CMakeLists.txt  CompressorController.cpp  CompressorController.h  CompressorController.ui  Dialog.cpp  Dialog.h  Equalizer.cpp  Equalizer.h  Equalizer.ui  EqualizerFilters.ui  EqualizersController.cpp  EqualizersController.h  EqualizersController.ui  FastLabelWidget.cpp  LevelMeterWidget.cpp  LevelMeterWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageInterface.h  NewOutputInstanceDialog.cpp  NewOutputInstanceDialog.h  NewOutputInstanceDialog.ui  OscWidgetArray.cpp  OscWidgetArray.h  OscWidgetMapper.cpp  OscWidgetMapper.h  OutputController.cpp  OutputController.h  OutputController.ui  OutputInstanceConfigDialog.cpp  (+9 more)
parseWave/: CMakeLists.txt  parsewav.cpp
waveSendUDPJack/: CMakeLists.txt  ControlClient.cpp  ControlInterface.cpp  ControlInterface.h  ControlServer.cpp  ControlServer.h  DelayFilter.cpp  DelayFilter.h  DitheringFilter.h  EqFilter.cpp  EqFilter.h  FilteringChain.cpp  FilteringChain.h  KeyBinding.cpp  KeyBinding.h  LoopbackOutputInstance.cpp  LoopbackOutputInstance.h  OscAddress.cpp  OscAddress.h  OscServer.cpp  OscServer.h  OscStatePersist.cpp  OscStatePersist.h  OutputInstance.cpp  OutputInstance.h  RemoteUdpOutput.cpp  RemoteUdpOutput.h  tinyosc.c  tinyosc.h  waveSendUDPJack.cpp
waveSendUDPJack/Filter/: BiquadFilter.cpp  BiquadFilter.h  CompressorFilter.cpp  CompressorFilter.h  DelayFilter.h  DitheringFilter.h  EqFilter.cpp  EqFilter.h  ExpanderFilter.cpp  ExpanderFilter.h  FilteringChain.cpp  FilteringChain.h  ReverbFilter.cpp  ReverbFilter.h
zlib/: zconf.h
(+36 files in other folders)
